# trellis

./: .rustfmt.toml  Cargo.toml
.github/workflows/: ci.yml
crates/trellis-broker/: Cargo.toml
crates/trellis-broker/src/: commit.rs  errors.rs  handlers.rs  lib.rs  net.rs
crates/trellis-cli/: Cargo.toml
crates/trellis-cli/src/: main.rs
crates/trellis-client/: Cargo.toml
crates/trellis-client/src/: display.rs  lib.rs
crates/trellis-client/tests/: e2e.rs
crates/trellis-core/: Cargo.toml
crates/trellis-core/src/: builder.rs  errors.rs  executor.rs  initialize.rs  layers.rs  lib.rs  state.rs
crates/trellis-core/src/model/: mod.rs  retry.rs  run.rs  status.rs  task.rs
crates/trellis-core/tests/: etl_pipeline.rs
crates/trellis-protocol/: Cargo.toml
crates/trellis-protocol/src/: codec.rs  lib.rs  messages.rs
crates/trellis-store/: Cargo.toml
crates/trellis-store/src/: cas.rs  data.rs  lib.rs  local.rs  s3.rs
crates/trellis-store/tests/: minio_integration.rs
crates/trellis-worker/: Cargo.toml
crates/trellis-worker/src/: errors.rs  heartbeat.rs  lib.rs  net.rs  registry.rs
docker/: docker-compose.yml
