[workspace]
members = ["crates/trellis-core", "crates/trellis-store", "crates/trellis-client"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.18"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "fs", "time"] }
walkdir = "2.5"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
