[workspace]
members = ["crates/trellis-core", "crates/trellis-store", "crates/trellis-client", "crates/trellis-protocol", "crates/trellis-broker", "crates/trellis-worker", "crates/trellis-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.18"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "fs", "time", "net", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
walkdir = "2.5"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
