[package]
name = "trellis-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trellis"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

trellis-broker = { path = "../trellis-broker" }
trellis-client = { path = "../trellis-client" }
trellis-core = { path = "../trellis-core" }
trellis-store = { path = "../trellis-store" }
trellis-worker = { path = "../trellis-worker" }
