[package]
name = "trellis-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

trellis-core = { path = "../trellis-core" }
trellis-store = { path = "../trellis-store" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
